--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,45 @@
-*.kdev4
-kdev4/
+
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
 *~
-*.txt.user
-*.txt.user.*
+*txt.user*
+*kdev4*
+
+build/
+Testing/
+.cache/
 .vscode/
+
+compile_commands.json
+
