--- a/rdyn_core/package.xml
+++ b/rdyn_core/package.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0"?>
-<package>
+<?xml version="2.0"?>
+<package format="2">
   <name>rdyn_core</name>
   <version>0.0.0</version>
   <description>The rdyn_core package</description>
@@ -16,19 +16,9 @@
 
   <buildtool_depend>cmake</buildtool_depend>
 
-  <build_depend>urdf</build_depend>
-
-  <build_depend>eigen_matrix_utils</build_depend>
-  <build_depend>kinematics_filters</build_depend>
-
-  <run_depend>urdf</run_depend>
-
-  <run_depend>eigen_matrix_utils</run_depend>
-  <run_depend>kinematics_filters</run_depend>
-
-  <!-- The export tag contains other, unspecified, tags -->
+  
+  <depend>urdfdom</depend>
+  <depend>cnr_control_toolbox</depend>
   <export>
-    <!-- Other tools can request additional information be placed here -->
-
   </export>
 </package>
